fix css blockquote spacing bottom

--- a/assets/sass/components/_markdown.scss
+++ b/assets/sass/components/_markdown.scss
@@ -28,6 +28,7 @@
     }
 
     blockquote {
+        margin: 0 0 $spacing-md;
         background-color: #f4f5f6;
         padding: $spacing-lg;
 
